# Hyc

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  meson.build
include/: Ast.h  CodeGen.h  Context.h  DebugPrint.h  DeclarationsCollector.h  GenericPrattParser.h  GraphOutput.h  Hashmap.h  ImplicitTypes.h  IndexedHashmap.h  Lexer.h  MetaType.h  Parser.h  ParserHelper.h  PerfectHashmap.h  Pipeline.h  PipelineStage_StackCreation.h  PipelineStage_TypeChecking.h  Precedence.h  Primitive.h  Scopes.h  StackCollection.h  StackCreator.h  Symbol.h  SymbolTable.h  TerminalOutput.h  Token.h  Type.h  TypeChecker.h  UID.h  ValueStorage.h
include/Backend/: ElideReturnCopy.h  LLVMBackend.h  LLVMBackendDefs.h  LLVMBackendExpr.h  LLVMBackendFuncDeclCollector.h  LLVMBackendMemberCollector.h  LLVMBackendStmt.h  LLVMBackendTypeCollector.h  Mangling.h  PromoteToSret.h  TypeToLLVMType.h
include/Frontend/: Ast.h  GenericPrattParser.h  Lexer.h  Parser.h  TerminalOutput.h  Token.h
include/Middleend/: AddDestructorCalls.h  ArrayDeclChecker.h  AtomicType.h  CircularEmbedChecker.h  CodePaster.h  CreateFuncArgsType.h  DeclarationsCollectorFunctions.h  DeclarationsCollectorTypes.h  DefaultTypeArgChecker.h  Desugar.h  ExpandScopes.h  GenerateOperators.h  GenericInstantiation.h  LValueChecker.h  MemberCollector.h  OperatorGenerationFuncs.h  Operators.h  Scopes.h  SymbolTable.h  TaggedValueChecker.h  TypeChecker.h  TypeCreator.h  ValueStorage.h
include/Tools/: DebugPrint.h  Hashmap.h  Messages.h  PerfectHashmap.h  Pipeline.h  Tree.h  UptrCast.h  ValuePtr.h
include/antlr4/: ParserRuleContext.h
include/antlr4/tree/: AbstractParseTreeVisitor.h  ParseTree.h
meta/: Hyc.l  Hyct.l  Hyra.g4  Hyrat.g4  Lexer.cpp  Lexer.h  debug.txt  goals.txt  invoke_reflex.bat
meta/.antlr/: Hyra.interp  HyraLexer.interp  HyraLexer.java  HyraLexer.tokens  HyraParser.java
src/: AtomicType.cpp  CodeGen.cpp  DebugPrint.cpp  DeclarationsCollector.cpp  GraphOutput.cpp  Lexer.cpp  Parser.cpp  ParserHelper.cpp  Pipeline.cpp  PipelineStage_StackCreation.cpp  PipelineStage_TypeChecking.cpp  Scopes.cpp  StackCollection.cpp  StackCreator.cpp  Symbol.cpp  SymbolTable.cpp  TerminalOutput.cpp  Type.cpp  TypeChecker.cpp  UID.cpp  main.cpp
src/Backend/: ElideReturnCopy.cpp  LLVMBackend.cpp  LLVMBackendExpr.cpp  LLVMBackendFuncDeclCollector.cpp  LLVMBackendMemberCollector.cpp  LLVMBackendStmt.cpp  LLVMBackendTypeCollector.cpp  Mangling.cpp  PromoteToSret.cpp  TypeToLLVMType.cpp
src/Frontend/: Ast.cpp  Lexer.cpp  Parser.cpp  TerminalOutput.cpp
src/Middleend/: AddDestructorCalls.cpp  ArrayDeclChecker.cpp  AtomicType.cpp  CircularEmbedChecker.cpp  CodePaster.cpp  CreateFuncArgsType.cpp  DeclarationsCollectorFunctions.cpp  DeclarationsCollectorTypes.cpp  DefaultTypeArgChecker.cpp  Desugar.cpp  ExpandScopes.cpp  GenerateOperators.cpp  GenericInstantiation.cpp  LValueChecker.cpp  MemberCollector.cpp  OperatorGenerationFuncs.cpp  Operators.cpp  Scopes.cpp  SymbolTable.cpp  TaggedValueChecker.cpp  TypeChecker.cpp  TypeCreator.cpp
src/Tools/: DebugPrint.cpp  Messages.cpp  Pipeline.cpp
tests/: CMakeLists.txt  debug.txt  required_output_parser_exprs.txt  required_output_parser_stmts.txt  test.ll  test.txt  test_input_desugar.txt  test_input_parser_expr.txt  test_input_parser_exprs.txt  test_input_parser_stmts.txt  test_input_type_checking.txt  test_input_type_checking_function_call.txt  test_input_type_function_collection.txt  tests.cpp  type_function_collection.txt
